--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,8 +25,15 @@
   height:100vh;
   background-color:#eee4bd;
   display:flex;
-  align-items:center;
   flex-direction: column;
   align-items: center;
   justify-content:center
+}
+
+.spener{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  
 }
