--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@
 }
 .main{
   height:100vh ;
-  background-color:#eee4bd;
+  background-color:rgb(249, 249, 249);
   display:flex;
   align-items:center;
 
@@ -23,7 +23,7 @@
 }
 .blog-form{
   height:100vh;
-  background-color:#eee4bd;
+  background-color:rgb(249, 249, 249);
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -36,4 +36,30 @@
   align-items:center;
   justify-content:center;
   
+}
+
+
+/*model  */
+
+.model{
+  width: 100%;
+  height: calc(100% - 55px);
+  position:absolute;
+  top:55px;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.singel-blog{
+  position:relative
+}
+.btn-clos{
+  background: none;
+  border: none;
+}
+
+.btn-clos:hover{
+  transform: scale(1.2);
+  background-color:rgb(240, 72, 72);
+  border-radius: 5px;
+  color:white
 }
