--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,14 @@
   align-items:center;
 
 }
+.main-red-mor{
+  height:100vh ;
+  background-color:rgb(249, 249, 249);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  
+}
 .link {
   color: #fff;
   text-decoration: inherit;
@@ -62,4 +70,33 @@
   background-color:rgb(240, 72, 72);
   border-radius: 5px;
   color:white
+}
+.author{
+  position:absolute;
+  bottom:2px;
+  font-size: 11px;
+  color:rgb(146, 146, 146);
+  text-transform: capitalize;
+}
+.redMore{
+  font-size: 12px;
+  color:rgb(43, 90, 190);
+  text-transform:lowercase
+}
+/* .btn-user-cart-edete{
+  position:absolute;
+  bottom:2px;
+}
+.btn-user-cart-delet{
+  position:absolute;
+  bottom:2px;
+  margin-left: 120px;
+} */
+
+.blog-read-redMore{
+  width:50%
+  
+}
+.discript{
+  padding-left:35px
 }
