--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,16 @@
+.logo{
+  font-family: 'Inspiration', cursive;
+  font-weight:600;
+}
+.site-name{
+  font-family: 'Inspiration', cursive;
+  font-weight:700;
+  font-size: 40px;
+  text-transform: capitalize;
+  color:rgb(249, 249, 249);
+  padding-left: 10px;
+}
+
 .form{
   height:100vh;
   background-color:#eee4bd;
@@ -12,6 +25,21 @@
   align-items:center;
 
 }
+
+.home-main{
+  background:url(https://images.pexels.com/photos/372748/pexels-photo-372748.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:relative
+}
+.after{
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:rgba(45, 51, 56,0.2);
+  position:absolute;
+}
 .main-red-mor{
   height:100vh ;
   background-color:rgb(249, 249, 249);
@@ -20,7 +48,54 @@
   justify-content:center;
   
 }
-.link {
+.btn-continer{
+  display:flex;
+  justify-content: space-around;
+}
+.btn-btn{
+  display: block;
+  width: 150px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 18px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  border: 0.5px solid rgb(255, 255, 255);
+  letter-spacing: 2px;
+  text-align: center;
+  position: relative;
+  transition: all .35s;
+}
+
+.btn-btn .link{
+  position: relative;
+  z-index: 2;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+.btn-btn:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: rgb(45, 51, 56);
+  
+  transition: all .70s;
+}
+
+.btn-btn:hover{
+  color: #fff;
+  border: 0px;
+}
+
+.btn-btn:hover:after{
+  width: 100%;
+}
+/* .link {
   color: #fff;
   text-decoration: inherit;
 }
@@ -28,7 +103,7 @@
   color: inherit;
   text-decoration: inherit;
   transform: scale(1.7)
-}
+} */
 .blog-form{
   height:100vh;
   background-color:rgb(249, 249, 249);
