--- a/client/src/App.css
+++ b/client/src/App.css
@@ -195,3 +195,35 @@
 .discript{
   padding-left:35px
 }
+
+/* read mor page*/
+.read__more{
+  margin-top: 130px;
+  border-radius:10px;
+  border: 2px solid rgb(241, 241, 241);
+  margin-bottom: 10px;
+}
+.read__more__img{
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+/*creat blog form*/
+ /* .creat__blog__form{
+  max-width: 100%;
+}  */
+.creat__blog__cont{
+  margin-top: 15%;
+  background-color: #f1f1f1;
+  padding:30px;
+  border-radius: 10px;
+}
+/* .blog__form__cont{
+  width: 100%;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+} */
