--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,30 @@
 *{
   text-decoration:none;
 }
+/*scrollbar*/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(52, 58, 64);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+
 .logo{
   font-family: 'Inspiration', cursive;
   font-weight:600;
@@ -264,6 +288,13 @@
 .edite{
   color:rgb(52, 58, 64);
   font-size: 20px;
+}
+
+.red-para{
+  padding-top:10px;
+  max-height:75vh;
+  overflow-y: scroll;
+  line-height:30px;
 }
 
 
