--- a/client/src/App.css
+++ b/client/src/App.css
@@ -184,10 +184,12 @@
 
 .model{
   width: 100%;
-  height: calc(100% - 55px);
+  /* height: calc(100vh - 55px); */
+  height:100%;
   position:absolute;
   top:55px;
   left: 0;
+  
   background-color: rgba(0, 0, 0, 0.5);
 }
 .singel-blog{
